--- a/PBR/PBR/core/templates/core/formulario.html
+++ b/PBR/PBR/core/templates/core/formulario.html
@@ -8,17 +8,29 @@
   </head>
 
   <body>
-
+<center>
 <div class='container-fluid'>
 <form method="POST">
 
       {% csrf_token %}
       <div class='col-md-9'>
+
+        <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" href="#collapse">BILHETE DE REPARO</a>
+            </h4>
+          </div>
+          <div id="collapse" class="panel-collapse collapse">
+            <div class="panel-body">
+
+
     <div class="panel-group">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" href="#collapse1">Contrato anual</a>
+        <a data-toggle="collapse" href="#collapse1">Informações sobre o bilhete</a>
       </h4>
     </div>
     <div id="collapse1" class="panel-collapse collapse">
@@ -26,13 +38,7 @@
 
       <div class='col-md-6'>
         {%bootstrap_form bilhete layout='vertical'%}
-        {%bootstrap_form ocorre layout='vertical'%}
-        {%bootstrap_form lococorre layout='vertical'%}
-        {%bootstrap_form infocorre layout='vertical'%}
-        {%bootstrap_form parecerpop layout='vertical'%}
-        {%bootstrap_form servinter layout='vertical'%}
-      	{%bootstrap_form material layout='vertical'%}
-        {%bootstrap_form materialretrn layout='vertical'%}
+
        </div>
 
 
@@ -44,19 +50,191 @@
   </div>
 </div>
 
+
+
+
+<div class="panel-group">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href="#collapse2">Ocorrencia</a>
+    </h4>
+  </div>
+  <div id="collapse2" class="panel-collapse collapse">
+    <div class="panel-body">
+
+
+
+    <div class='col-md-6'>
+      {%bootstrap_form ocorre layout='vertical'%}
+     </div>
+
+
+
+
+  </div>
+    <div class="panel-footer">Footer</div>
+  </div>
+</div>
+</div>
+
+
+
+
+<div class="panel-group">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href="#collapse3">Local ocorrencia</a>
+    </h4>
+  </div>
+  <div id="collapse3" class="panel-collapse collapse">
+    <div class="panel-body">
+
+
+
+    <div class='col-md-6'>
+      {%bootstrap_form lococorre layout='vertical'%}
+     </div>
+
+
+
+
+  </div>
+    <div class="panel-footer">Footer</div>
+  </div>
+</div>
+</div>
+
+
+
+
+
+<div class="panel-group">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href="#collapse4">Informações de ocorrencia</a>
+    </h4>
+  </div>
+  <div id="collapse4" class="panel-collapse collapse">
+    <div class="panel-body">
+
+
+
+    <div class='col-md-6'>
+      {%bootstrap_form infocorre layout='vertical'%}
+     </div>
+
+
+
+
+  </div>
+    <div class="panel-footer">Footer</div>
+  </div>
+</div>
+</div>
+
+
+
+
+
+<div class="panel-group">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href="#collapse5">Parecer POP</a>
+    </h4>
+  </div>
+  <div id="collapse5" class="panel-collapse collapse">
+    <div class="panel-body">
+
+
+
+    <div class='col-md-6'>
+      {%bootstrap_form parecerpop layout='vertical'%}
+     </div>
+
+
+
+
+  </div>
+    <div class="panel-footer">Footer</div>
+  </div>
+</div>
+</div>
+
+
+
+
+
+<div class="panel-group">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href="#collapse6">Serviço INTERJATO</a>
+    </h4>
+  </div>
+  <div id="collapse6" class="panel-collapse collapse">
+    <div class="panel-body">
+
+
+
+    <div class='col-md-6'>
+      {%bootstrap_form servinter layout='vertical'%}
+     </div>
+
+
+
+
+  </div>
+    <div class="panel-footer">Footer</div>
+  </div>
+</div>
+</div>
+
+
+
+<div class="panel-group">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href="#collapse7">Material</a>
+    </h4>
+  </div>
+  <div id="collapse7" class="panel-collapse collapse">
+    <div class="panel-body">
+
+
+
+    <div class='col-md-6'>
+      {%bootstrap_form material layout='vertical'%}
+     </div>
+
+
+
+
+  </div>
+    <div class="panel-footer">Footer</div>
+  </div>
+</div>
+</div>
+
+
   <div class="panel-group">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" href="#collapse12">Contrato aditivo</a>
+        <a data-toggle="collapse" href="#collapse8">Material retorno</a>
       </h4>
     </div>
-    <div id="collapse12" class="panel-collapse collapse">
+    <div id="collapse8" class="panel-collapse collapse">
       <div class="panel-body">
 
 
 
       <div class='col-md-6'>
+        {%bootstrap_form materialretrn layout='vertical'%}
 
        </div>
 
@@ -73,8 +251,18 @@
     	</br>
 
     </form>
+
+
+  </div>
+    <div class="panel-footer">Panel Footer</div>
+  </div>
+</div>
+</div>
     </div>
 
+
+
+</center>
   </body>
 
 </html>
